--- a/index.html
+++ b/index.html
@@ -8,36 +8,29 @@
     <div id="wrapper">
       <div id="header">
         <ul>
-          <li id="user">Michael</li>
           <li><a href="#">Gmail</a></li>
           <li><a href="#">Images</a></li>
           <li id="apps"></li> 
-          <li id="notifications"></li> 
-          <li id="user-menu"><div id="user-initial">M</div></li>
         </ul>
       </div>
       <div id="content">
-        <center>
           <div id="logo">
-            <span id="country">Australia</span>
+             
           </div>
-        </center>
-
+          <img  src="src/img/google.png" alt="Google">
         <form id="search-form">
-          <center>
+
             <input type="text" name="search" id="search-box">
             <div id="button-container">
               <input type="submit" value="Google Search">
-              <input type="submit" value="I'm Feeling Lucky">
             </div>
-          </center>
         </form>
       </div>
       <div id="footer">
         <div id="footer-left">
           <ul>
-            <li><a href="#">Advertising</a></li>
-            <li><a href="#">Business</a></li>
+
+
             <li><a href="#">About</a></li>
           </ul>
         </div>
@@ -46,7 +39,6 @@
             <li><a href="#">Privacy</a></li>
             <li><a href="#">Terms</a></li>
             <li><a href="#">Settings</a></li>
-            <li><a href="#">Use Google.com</a></li>
           </ul>
         </div>
       </div>
